--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: nextjs-application-template
-description: A template for quickly starting Next.js application development
+title: Digits Contact Management
+description: A web application for managing contacts
 google_analytics:
 show_downloads: true
 theme: jekyll-theme-cayman
